tests/ui/feature-gates/feature-gate-no-coverage.stderr
error[E0557]: feature has been removed
  --> $DIR/feature-gate-no-coverage.rs:2:12
   |
LL | #![feature(no_coverage)]
   |            ^^^^^^^^^^^ feature has been removed
   |
   = note: renamed to `coverage_attribute`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0557`.
